logs/Covid_dags/creatableLoad/2022-11-29T020452.752752+0000/2.log
[2022-11-29 02:10:17,174] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T02:04:52.752752+00:00 [queued]>
[2022-11-29 02:10:17,181] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T02:04:52.752752+00:00 [queued]>
[2022-11-29 02:10:17,181] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-11-29 02:10:17,181] {taskinstance.py:1244} INFO - Starting attempt 2 of 2
[2022-11-29 02:10:17,181] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-11-29 02:10:17,189] {taskinstance.py:1264} INFO - Executing <Task(PythonOperator): creatableLoad> on 2022-11-29 02:04:52.752752+00:00
[2022-11-29 02:10:17,192] {standard_task_runner.py:52} INFO - Started process 112 to run task
[2022-11-29 02:10:17,195] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'Covid_dags', 'creatableLoad', 'manual__2022-11-29T02:04:52.752752+00:00', '--job-id', '835', '--raw', '--subdir', 'DAGS_FOLDER/dbtest.py', '--cfg-path', '/tmp/tmpxhhmrldc', '--error-file', '/tmp/tmptkoko82o']
[2022-11-29 02:10:17,196] {standard_task_runner.py:77} INFO - Job 835: Subtask creatableLoad
[2022-11-29 02:10:17,231] {logging_mixin.py:109} INFO - Running <TaskInstance: Covid_dags.creatableLoad manual__2022-11-29T02:04:52.752752+00:00 [running]> on host acb48b0a6e0d
[2022-11-29 02:10:17,264] {taskinstance.py:1431} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=Covid_dags
AIRFLOW_CTX_TASK_ID=creatableLoad
AIRFLOW_CTX_EXECUTION_DATE=2022-11-29T02:04:52.752752+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-11-29T02:04:52.752752+00:00
[2022-11-29 02:10:17,278] {taskinstance.py:1718} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dbtest.py", line 129, in creatableLoad
    row.split(",")[11]
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 3: ... '"1"', '"0"', '"0"', '"2"', '"2"', '"2"', '"0"', '"0"','"2"
                                                                   ^

[2022-11-29 02:10:17,287] {taskinstance.py:1282} INFO - Marking task as FAILED. dag_id=Covid_dags, task_id=creatableLoad, execution_date=20221129T020452, start_date=20221129T021017, end_date=20221129T021017
[2022-11-29 02:10:17,297] {standard_task_runner.py:92} ERROR - Failed to execute job 835 for task creatableLoad
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/dbtest.py", line 129, in creatableLoad
    row.split(",")[11]
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 3: ... '"1"', '"0"', '"0"', '"2"', '"2"', '"2"', '"0"', '"0"','"2"
                                                                   ^

[2022-11-29 02:10:17,327] {local_task_job.py:154} INFO - Task exited with return code 1
[2022-11-29 02:10:17,347] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
